# dreamcatcher-earable-wearer-aware-benchmark

./: .gitignore  README.md  earable_cli.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/dataset/: dreamcatcher_audio.yaml
data/: README.md
docs/: QUICK_START.md  TEACHER_TRAINING.md  WORKFLOW.md  artifact_contract.md  decision_log.md  negative_results.md
experiments/: auto_launch_crnn_improved_cbam.sh  eval_teacher.sh  make_plots.sh  manifest_repro_v1.json  run_audio_benchmark.sh  run_audio_smoke.sh  run_balanced4_baseline.sh  run_balanced4_kd.sh  run_balanced4_teacher.sh  run_kd.sh  run_kd_smoke.sh  run_respiratory_baseline.sh  run_respiratory_kd.sh  run_respiratory_smoke.sh  train_kd.sh  train_teachers.sh  watch_balanced4.sh
notebooks/: data_analysis.ipynb  results_analysis.ipynb
results/: leaderboard.csv  run_steps.csv  top5.md
results/cache/: balanced4_indices_full_test.json  balanced4_indices_full_train.json  balanced4_indices_full_validation.json
scripts/: check_consistency.py  earable_cli.py  monitor_experiments.sh  plot_distribution.py  plot_distribution.sh  preprocess.py  preprocess_balanced4_cache.py  run_experiment_manifest.py  watch_experiments.sh
src/: __init__.py
src/data/: __init__.py  audio_features.py  balanced4_cached.py  cached_dataset.py  constants.py  dreamcatcher_dataset.py  dreamcatcher_hf.py  dreamcatcher_loader.py  dreamcatcher_subset.py  smoke_test.py
src/evaluation/: leaderboard_report.py  make_topk_md.py  metrics.py  pareto_plot.py  plot_class_distribution.py
(+55 files in other folders)
