[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamcatcher-earable-wearer-aware-benchmark"
version = "0.1.0"
description = "Resource-efficient wearer-aware event recognition on earables (DreamCatcher dataset)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sumeyye Agac" }
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402"]

